<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
  	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:gravity="center">
		
		<Button android:id="@+id/but_return" 
			android:layout_width="80dp"
			android:layout_height="wrap_content" 
			android:layout_marginRight="20dp"
			android:text="@string/but_return" />
			
		<Button android:id="@+id/but_connect" 
			android:layout_width="80dp"
			android:layout_height="wrap_content" 
			android:layout_marginRight="20dp"
			android:text="@string/but_connect" />
			
		<Button android:id="@+id/but_ok" 
			android:layout_width="80dp"
			android:layout_height="wrap_content" 
			android:layout_marginRight="20dp"
			android:text="@string/but_ok" />
			
		<Button android:id="@+id/but_fail" 
			android:layout_width="80dp"
			android:layout_height="wrap_content" 
			android:layout_marginRight="20dp"
			android:text="@string/but_fail" />
	</LinearLayout>
  
</LinearLayout>
